- loading indicator and hiding control after file select - invisible file control files fix

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -25,12 +25,15 @@ input[type="file"] {
   position: absolute;
   z-index: 2;
   top: 0;
+  bottom: 0;
   left: 0;
+  width: 100%;
   filter: alpha(opacity=0);
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
   opacity: 0;
   background-color: transparent;
   color: transparent;
+  cursor: pointer;
 }
 
 .container > .row > div {
